# ft_webserv

./: .gitignore  123  CMakeLists.txt  README.md  Server.cpp  Server.hpp  asd.cpp  main.cpp  main_for_check_nonblock.cpp  other_example_for_tests.cpp
Client/: Client.cpp  Client.hpp  ClientBase.hpp  IClient.hpp  IRequest.hpp  Request.cpp  Request.hpp  RequestBase.hpp  SocketBase.hpp  SocketClient.cpp  SocketClient.hpp  SocketMain.cpp  SocketMain.hpp
Exceptions/: serverStartException.hpp
Logger/: Logger.cpp  Logger.hpp
Nginx_test_server/: Dockerfile  for_test_telnet.sh
Nginx_test_server/configs/: nginx_simple.conf
Nginx_test_server/content/: index.html
Server/: ConnectionsBase.hpp  ConnectionsClients.cpp  ConnectionsClients.hpp  ConnectionsMainSockets.cpp  ConnectionsMainSockets.hpp  ConnectionsSocketServer.cpp  ConnectionsSocketServer.hpp  ConnectionsSockets.cpp  ConnectionsSockets.hpp  Server.cpp  Server.hpp  ServerUtils.cpp  ServerUtils.hpp
UnitTests/: ClientRequestFixture.cpp  Example_test.cpp  ExeptionTest.cpp  RequestTest.cpp
config_examples/: test_config
parser/: Config.cpp  Config.hpp  IParser.hpp  Parser.cpp  Parser.hpp  RouteConfig.cpp  RouteConfig.hpp  ServerConfig.cpp  ServerConfig.hpp
